package com.clinic.management.model.util;

public enum RoomType {
    GENERAL,
    ULTRASOUND,
    SURGERY
}
